--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -27,8 +27,7 @@
 <div class="page">
 <h2>COVID-19 Configurator
 	<div class="info">The COVID-19 simulation is controlled by <span id="param_count"></span> parameters. Click on the name of a parameter to add or remove it from
-	the list of your favourite parameters. DEBUG parameters are used to introduce
-	specific situation or behaviour. The information from this page is
+	the list of your favourite parameters. The information from this page is
 	stored only locally &ndash; it is not transmitted anywhere.
 	<button onclick="resetConfigurator()">Reset</button>
 	<button onclick="debugConfigurator()">Debug</button>
@@ -39,7 +38,6 @@
 	Show:
 	<label class="filters"><input type="radio" name="show" id="show-fav" checked onchange="toggleFilter()"><span>My</span></label>
     <label class="filters"><input type="radio" name="show" id="show-all" onchange="toggleFilter()"><span>All</span></label>
-    <label class="filters"><input type="radio" name="show" id="show-main" onchange="toggleFilter()"><span>Main</span></label>
 
 	<div class="start-block">
 		<a class="start" href="covid-19-simulator.html" onclick="prepareValues()">Start simulation</a>
@@ -66,7 +64,7 @@
 			2, 'General' );
 
 		addNumeric(
-			'rs', 'Random layout', 0, {min:0, max:100000, step:1, debug:true},
+			'rs', 'Random layout', 0, {min:0, max:100000, step:1},
 			'The number that determines the layout of streets and buildings. If 0, the simulator will pick an arbitrary layout. It not 0, the simulator will use that spacific layout if the other configuration parameters are the same.' );
 
 		addNumeric(
@@ -92,62 +90,62 @@
 			2, 'Navigational mesh' );
 
 		addPercentage(
-			'dnmo', 'Navmesh opacity', 0, {min:0, max:1, step:0.25, debug:true},
+			'dnmo', 'Navmesh opacity', 0, {min:0, max:1, step:0.25},
 			'Percentage of opacity of the navigational mesh (navmesh) &ndash; crimson and orange areas showing locations of rooms, elevators, checkpoints, etc. At 100% the navmesh is fully opaque, while at 0% it is fully transparent. Navmeshes are shown on top of buildings and other 3D objects.' );
 			
 		addBoolean(
-			'dnmsf', 'Navmesh floors', false, {debug:true},
+			'dnmsf', 'Navmesh floors', false, {},
 			'If checked, generates images of navmesh rooms at the floor level. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
 
 		addBoolean(
-			'dnmsl', 'Navmesh routes', false, {debug:true},
+			'dnmsl', 'Navmesh routes', false, {},
 			'If checked, generates images of navmesh routes. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
 
 		addBoolean(
-			'dnmse', 'Navmesh elevators', false, {debug:true},
+			'dnmse', 'Navmesh elevators', false, {},
 			'If checked, generates images of navmesh elevators. However, they are shown only if <em>Navmesh opacity</em> is not 0%.' );
 
 		addHeader(
 			2, 'Others' );
 
 		addBoolean(
-			'dbwoh', 'Blocks with houses', false, {debug:true},
+			'dbwoh', 'Blocks with houses', false, {},
 			'If checked, generate blocks with houses. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with houses are generated.' );
 
 		addBoolean(
-			'dbwoa', 'Blocks with apartments', false, {debug:true},
+			'dbwoa', 'Blocks with apartments', false, {},
 			'If checked, generate blocks with apartments. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with apartments are generated.' );
 
 		addBoolean(
-			'dbwoo', 'Blocks with offices', false, {debug:true},
+			'dbwoo', 'Blocks with offices', false, {},
 			'If checked, generate blocks with offices. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with offices are generated.' );
 
 		addBoolean(
-			'dbwop', 'Blocks with parks', false, {debug:true},
+			'dbwop', 'Blocks with parks', false, {},
 			'If checked, generate blocks with parks. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with parks are generated.' );
 
 		addBoolean(
-			'dbwoz', 'Blocks with plazas', false, {debug:true},
+			'dbwoz', 'Blocks with plazas', false, {},
 			'If checked, generate blocks with plazas. However, all <em>Blocks with ...</em> parameters are altogether not checked, then blocks with plazas are generated.' );
 
 		addPercentage(
-			'dbuo', 'Building opacity', 1, {min:0, max:1, step:0.25, debug:true},
+			'dbuo', 'Building opacity', 1, {min:0, max:1, step:0.25},
 			'Percentage of opacity of all buildings &ndash; houses, apartments and offices. At 100% the buildings are fully opaque, while at 0% they are fully transparent.' );
 			
 		addPercentage(
-			'dblo', 'Ground opacity', 1, {min:0, max:1, step:0.25, debug:true},
+			'dblo', 'Ground opacity', 1, {min:0, max:1, step:0.25},
 			'Percentage of opacity of the ground &ndash; pavements, streets, grass. At 100% the ground is fully opaque, while at 0% it is fully transparent.' );
 			
 		addBoolean(
-			'dhr', 'Hide roofs', false, {debug:true},
+			'dhr', 'Hide roofs', false, {},
 			'If checked, buildings are drawn without roofs and it is possibel to see people inside.' );
 
 		addBoolean(
-			'dsd', 'Show directions', false, {debug:true},
+			'dsd', 'Show directions', false, {},
 			'If checked, prints the directions and axes outside the city boundary. The orientation is as if the city is looked from below.' );
 
 		addBoolean(
-			'daaf', 'Apartment floors', false, {debug:true},
+			'daaf', 'Apartment floors', false, {},
 			'If checked, the floors of the apartment building are drawn. To see the floors the view point should be inside the building or <em>Building opacity</em> should be less than 100%.' );
 
 		addPercentage(
@@ -192,7 +190,7 @@
 
 		addNumeric(
 			'mf', 'Maximal floors', 120, {min:10, max:400, step:10},
-			'Maximal number of floors in in the tallest buildigs.' );
+			'Maximal number of floors (storey) in the tallest buildigs. The actual number of floors in a particular building depends on a random number bound by this value.' );
 
 		addNumeric(
 			'hbr', 'House bounding radius', 5, {min:4, max:20, step:1},
@@ -215,59 +213,59 @@
 			2, 'Behaviour' );
 
 		addBoolean(
-			'drw', 'RANDOM WANDERING', false, {debug:true},
+			'drw', 'RANDOM WANDERING', false, {},
 			'If checked, the people are walking in random directions and they do not follow any routine. If not checked, the people follow their daily routine.' );
 
 		addBoolean(
-			'dfal', 'Line formation', false, {debug:true},
+			'dfal', 'Line formation', false, {},
 			'If checked, the people are positioned in lines and columns. If not checked, the people are positioned in buildings.' );
 
 		addBoolean(
-			'dsaad', 'Age diagram', false, {debug:true},
+			'dsaad', 'Age diagram', false, {},
 			'If checked, shows a diagram of age distribution of people (number of people per age in years). The theoretical distribution is shown in crimson, the actual distribution is shown in blue. Click on the diagram to hide it.' );
 
 		addBoolean(
-			'dsvs', 'Viral diagram', false, {debug:true},
+			'dsvs', 'Viral diagram', false, {},
 			'If checked, shows a diagram of the viral shedding (infection level per time period). Higher values indicate higher probability of infecting nearby people. Vertical lines split the diagram into 14 periods. Click on the diagram to hide it.' );
 
 		addBoolean(
-			'dcvoa', 'Look at people', false, {debug:true},
+			'dcvoa', 'Look at people', false, {},
 			'If checked, when the simulation starts, sets the view point on the people. This can be used to find people if they are a small compact group in a large city.' );
 
 		addNumeric(
-			'dfa', 'Follow person', -1, {min:-1, max:50000, step:1, debug:true},
+			'dfa', 'Follow person', -1, {min:-1, max:50000, step:1},
 			'Each person has an id number starting from 0. If this parameter cointains an existing person id, then the view point automatically follows this person as if spied from a drone. If the value is -1, such following is turned off.' );
 
 		addNumeric(
-			'dfah', 'Follow person health', -1, {min:-1, max:50000, step:1, debug:true},
+			'dfah', 'Follow person health', -1, {min:-1, max:50000, step:1},
 			'If this parameter cointains an existing person id, then the health status of this person is printed in the JS console. If the value is -1, such printing is turned off.' );
 
 		addBoolean(
-			'dshtwa', 'Home-to-work arrow', false, {debug:true},
+			'dshtwa', 'Home-to-work arrow', false, {},
 			'If checked, an arrow is generated for each person pointing from home to office location.' );
 
 		addBoolean(
-			'dsr', 'Show route', false, {debug:true},
+			'dsr', 'Show route', false, {},
 			'If checked, show the route of each person as a sequence of arrows.' );
 
 		addBoolean(
-			'ddr', 'Print route', false, {debug:true},
+			'ddr', 'Print route', false, {},
 			'If checked, prints the route of each person in the JS console. This parameter is checked when there are a few people, preferable exactly one, i.e. <em>Agent count</em>=1.' );
 
 		addNumeric(
-			'drpa', 'Routes per person', 1, {min:1, max:200, step:1, debug:true},
+			'drpa', 'Routes per person', 1, {min:1, max:200, step:1},
 			'The number of routes generated for each person. Independent on the value, onle one of the routes is used. THe others only indicate what possibilities exists. This parameter is often used with <em>Show route</em> checked and <em>Agent count</em>=1.' );
 
 		addNumeric(
-			'daa', 'Follow person actions', -1, {min:-1, max:50000, step:1, debug:true},
+			'daa', 'Follow person actions', -1, {min:-1, max:50000, step:1},
 			'If this parameter cointains an existing person id, then the timestamped actions of  this person are printed in the JS console. If the value is -1, such printing is turned off.' );
 
 		addBoolean(
-			'dal', 'Population whereabouts', false, {debug:true},
+			'dal', 'Population whereabouts', false, {},
 			'If checked, once per second prints in the JS console the number of people at home, commuting and at work.' );
 			
 		addBoolean(
-			'dah', 'Population health', false, {debug:true},
+			'dah', 'Population health', false, {},
 			'If checked, once per second prints in the JS console the number of infected people.' );
 			
 
@@ -278,11 +276,11 @@
 			'These prameters control how the user navigates in the city.' );
 
 		addBoolean(
-			'dar', 'Auto rotate', false, {debug:true},
+			'dar', 'Auto rotate', false, {},
 			'If checked, the scene rotates continuously with speed defined by <em>Auto rotate speed</em>. The user can still use the mouse to rotate manually. If not checked, the scene does not move by itself.' );
 
 		addNumeric(
-			'dars', 'Auto rotate speed', 0.3, {min:0, max:1, step:0.1, debug:true, unit:'rad/s', offset: 7},
+			'dars', 'Auto rotate speed', 0.3, {min:0, max:1, step:0.1, unit:'rad/s', offset: 7},
 			'The speed of automatic rotation measure in radians per second. The value is effective only if <em>Auto rotate</em> is checked, otherwise it has no effect.' );
 
 // GRAPHICS AND STYLE ===================================
@@ -292,11 +290,11 @@
 			'These prameters control the visual effects.' );
 
 		addBoolean(
-			'daw', 'All white', false, {debug:true},
+			'daw', 'All white', false, {},
 			'If checked, all buildings, trees and the ground are white. People colours are not affected.' );
 			
 		addBoolean(
-			'cs', 'Cartoon style', false, {debug:true},
+			'cs', 'Cartoon style', false, {},
 			'If checked, people, houses and trees are drawn in cartoon style &ndash white with heavy contrast shading.' );
 
 // NATURE ===================================
@@ -306,15 +304,15 @@
 			'These prameters control the nature &ndash; time, sun, etc.' );
 
 		addTime(
-			'dts', 'Time speed', timeMs(0,0,1), {min:timeMs(0,0,1), max:timeMs(1,0,0), step:timeMs(0,0,1),debug:true},
+			'dts', 'Time speed', timeMs(0,0,1), {min:timeMs(0,0,1), max:timeMs(1,0,0), step:timeMs(0,0,1),},
 			'How much virtual time passes for 1 second of real time. For example, 00:00:01 is for realtime simulation, 00:00:05 is for simulation 5 times faster.' );
 
 		addTime(
-			'st', 'Start time', timeMs(6,20), {min:timeMs(0,0,0), max:timeMs(23,59,59), step:timeMs(0,10,0),debug:true},
+			'st', 'Start time', timeMs(6,20), {min:timeMs(0,0,0), max:timeMs(23,59,59), step:timeMs(0,10,0),},
 			'The virtual time at which the simulation starts.' );
 
 		addBoolean(
-			'dspg', 'Manual sun', false, {debug:true},
+			'dspg', 'Manual sun', false, {},
 			'If checked, adds a control for manually changing the sun position. This affects lightings and shadows (if they are turned on). The position is set as hours &ndash; i.e. 18.5 corresponds to 18:30.' );
 
 // MISC ===================================
@@ -324,7 +322,7 @@
 			'These prameters control the generation of virtual people, their properties and behaviour.' );
 
 		addBoolean(
-			'dri', 'Renderer info', false, {debug:true},
+			'dri', 'Renderer info', false, {},
 			'If checked, shows renderer info (once per 10000 frames) in the JS console &ndash; number of geometries, textures, calls, lines, points and triangles.' );
 
 		addNumeric(
@@ -346,6 +344,12 @@
 		addNumeric(
 			'cmc', 'Minimal crossing distance', 15, {min:5, max:20, step:1, unit:'m'},
 			'The minimal distance in meters between two pedestrian crossing in the same direction. If the Manhattan distance between two crossings is smaller than this value, one of the crossing will not be generated. The distance must consider <em>Street width</em> as this width indicates the theretical closeness of crossings.' );
+			
+		addNumericRange(
+			'ors', 'Office room size', 5, 10, {min:3, max:20, step:1, unit:'m'},
+			'The desired range for an office room size. The actual size is calculated from the building size.' );
+			
+
 			
 
 
